tests/lean/nbug1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
nbug1.lean:1:1 error: invalid notation declaration, at least one placeholder expected
