tests/lean/nbug1.lean
Notation 100 ++ : and
